# neo4j-text2cypher-agent

./: .env.example  .gitignore  README.md  pyproject.toml  test_workflow.ipynb
app-config/american/: config.yml
app-config/american/neo4j_database_schema/: neo4j_schema.json
app-config/honda/: config.yml  test_workflow.ipynb
app-config/honda/neo4j_database_schema/: honda_schema.json
neo4j_agent/: __init__.py  agent.py  state.py
neo4j_agent/nodes/: __init__.py  guardrails.py  summarizer.py
neo4j_agent/subgraphs/: __init__.py
neo4j_agent/subgraphs/text2cypher/: __init__.py  graph.py
neo4j_agent/subgraphs/text2cypher/nodes/: __init__.py  corrector.py  executor.py  generator.py  validator.py
neo4j_agent/ui/: __init__.py  app.py  session.py  streaming.py  theme.py
neo4j_agent/ui/components/: __init__.py  chat.py  cypher_highlight.py  execution_summary.py  neo4j_visualization.py  settings.py  sidebar.py
neo4j_agent/utils/: __init__.py  config.py  cypher_lexer.py  history.py  llm.py  neo4j.py  retriever.py  schema.py  state_helpers.py
